# Install the help files
INSTALL(DIRECTORY en_US
   DESTINATION ${VISIT_INSTALLED_VERSION_HELP}
   FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ GROUP_WRITE WORLD_READ 
   DIRECTORY_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
   PATTERN ".svn" EXCLUDE
)
