# Copyright (c) Lawrence Livermore National Security, LLC and other VisIt
# Project developers.  See the top-level LICENSE file for dates and other
# details.  No copyright assignment is required to contribute to VisIt.

#****************************************************************************
# Modifications:
#
#****************************************************************************

ADD_SUBDIRECTORY(rpc)
ADD_SUBDIRECTORY(proxy)
ADD_SUBDIRECTORY(main)
